--- a/DOM.html
+++ b/DOM.html
@@ -14,6 +14,26 @@
     <h2 class="cs">CSE-CS</h2>
     <h2 class="csm">CSE-AMIL</h2>
     <h2 class="it">CSE-IT</h2>
+    <p class="one">The Mrcet is the one of the best institution in the Malla readdy group Of institution</p>
+    <p class="one">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde iusto nihil earum dolor nisi perspiciatis modi pariatur rerum voluptatem, qui sed, error omnis ducimus asperiores eligendi. Commodi repudiandae voluptatem ea.</p>
+    <p class="one">I am learning the web development </p>
+    <h2 class="query">Query Selector</h2>
+    <h3 class="query">Laxman</h3>
+    <h3 class="query">Manjuuu</h3>
+    <h3 class="query">Arjuna</h3>
+    <h3 class="query">Anvesh</h3>
+    <h2>The List of Anime: </h2>
+    <ol>
+        <li class="anime">Avatar The Last Airbender</li>
+        <li class="anime">Naruto</li>
+        <li class="anime">Tokyo Revengers</li>
+        <li class="anime">Jujutsu Keisan</li>
+        <li class="anime">Black Clover</li>
+    </ol>
+    <button onclick="changeBackground()">Change Background</button>
+    <h2>Change the Text</h2>
+    <h3 class ="user">Dhruva</h3><br>
+    <button onclick="changeText()">Click Here !</button>
 
 
     <script src="DOM.js"></script>
